--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.1.2",
     "element-ui": "^2.4.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
